Has been added 2 block(why) and block 3(about)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <h2 class="bord__subtitle">
                 <span class="accent bord__label">Thrivetalk</span>
               </h2>
-              <h1 class="bord__title">
+              <h1 class="bord__title title">
                 HELPING YOU THRIVE IN ALL AREAS OF LIFE
               </h1>
               <p class="bord__text">
@@ -49,6 +49,44 @@
                 <a href="#" class="bord__btn">WHO AM I</a
                 ><a href="#" class="bord__btn">WHAT DO I DO</a>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="why">
+          <div class="why__content">
+            <div class="why__container">
+              <div class="why__body">
+                <h2 class="why__title">Why Thrive?</h2>
+                <div class="why__text">
+                  <span class="why__text-bold"
+                    >Want to improve your well-being from the comfort of your
+                    own couch? Are you having trouble finding the right
+                    therapist?</span
+                  >
+                  Here at ThriveTalk, our licensed therapists provide the same
+                  quality care you would get in office from anywhere you can
+                  access your laptop or mobile phone. Become your best self with
+                  ThriveTalk. Start therapy now with a licensed therapist!
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="why__image">
+            <img src="/img/why-img.jpg" alt="" />
+          </div>
+        </section>
+        <section class="about">
+          <div class="about__container container">
+            <div class="about__body">
+              <div class="about__label">ABOUT US</div>
+              <p class="about__text">
+                We want to help you thrive! Whether you are just looking for
+                someone to talk to, or are struggling with a mental wellness
+                issue we’re here to help. Our highly talented therapists can
+                help you with a range of issues including relationships, sex,
+                PTSD, depression, social anxiety, or even just caring for
+                yourself more.
+              </p>
             </div>
           </div>
         </section>
