--- a/index.html
+++ b/index.html
@@ -76,18 +76,16 @@
           </div>
         </section>
         <section class="about">
-          <div class="about__container container">
-            <div class="about__body">
-              <div class="about__label">ABOUT US</div>
-              <p class="about__text">
-                We want to help you thrive! Whether you are just looking for
-                someone to talk to, or are struggling with a mental wellness
-                issue we’re here to help. Our highly talented therapists can
-                help you with a range of issues including relationships, sex,
-                PTSD, depression, social anxiety, or even just caring for
-                yourself more.
-              </p>
-            </div>
+          <div class="about__body">
+            <div class="about__label about__elem">ABOUT US</div>
+            <p class="about__text">
+              We want to help you thrive! Whether you are just looking for
+              someone to talk to, or are struggling with a mental wellness issue
+              we’re here to help. Our highly talented therapists can help you
+              with a range of issues including relationships, sex, PTSD,
+              depression, social anxiety, or even just caring for yourself more.
+            </p>
+            <div class="about__elem"></div>
           </div>
         </section>
       </main>
